# Net

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  runBuild.cmd
cmake/: CMakeLists.txt.glm  CMakeLists.txt.googletest  DownloadProject.cmake  Testing.cmake
src/exec/: Addition.cpp  App.cpp  App.hpp  Intersection.cpp  XOR.cpp
src/helpers/: Intersections.cpp  Intersections.hpp
src/net/: CMakeLists.txt  CommonStructs.hpp  ConnectedNet.cpp  ConnectedNet.hpp  Net.cpp  Net.hpp  Neuron.cpp  Neuron.hpp
src/testing/: ExampleUnitTests.cpp  GoogleTest.cmake  Testing.cmake
